[gd_scene load_steps=44 format=2]

[ext_resource path="res://wpnsys/hurt_stuff/commongundata.gd" type="Script" id=1]
[ext_resource path="res://scenes/enemies/introscorpion/Flippables.gd" type="Script" id=2]
[ext_resource path="res://wpnsys/hurt_stuff/darkpistolresourcepacker.gd" type="Script" id=3]
[ext_resource path="res://wpnsys/hurt_stuff/Gun.gd" type="Script" id=4]
[ext_resource path="res://scenes/enemies/boss1/RandomAttacks.gd" type="Script" id=5]
[ext_resource path="res://n_plr_detector.gd" type="Script" id=6]
[ext_resource path="res://scenes/enemies/boss1/JumpTowardsPlayer.gd" type="Script" id=7]
[ext_resource path="res://scenes/enemies/introscorpion/idunno.gd" type="Script" id=8]
[ext_resource path="res://testtile.png" type="Texture" id=10]
[ext_resource path="res://raw_sprites/player/bootlegeo.png" type="Texture" id=11]
[ext_resource path="res://scenes/enemies/boss1/RunTowardsPlayer.gd" type="Script" id=12]
[ext_resource path="res://scenes/enemies/boss1/Shoryuken.gd" type="Script" id=13]
[ext_resource path="res://scenes/enemies/boss1/UpperCutCharge.gd" type="Script" id=14]
[ext_resource path="res://scenes/enemies/boss1/Shoot.gd" type="Script" id=15]
[ext_resource path="res://wpnsys/hurt_stuff/statusThing.gd" type="Script" id=16]
[ext_resource path="res://raw_sprites/circletex.png" type="Texture" id=17]
[ext_resource path="res://wpnsys/hurt_stuff/hurt_component.gd" type="Script" id=18]
[ext_resource path="res://bullets/fire_blast_bullet/fire_blast.tscn" type="PackedScene" id=19]
[ext_resource path="res://wpnsys/hurt_stuff/hurthitboxes/hitbox.tscn" type="PackedScene" id=20]
[ext_resource path="res://scenes/enemies/boss1/bossanims.gd" type="Script" id=21]
[ext_resource path="res://scenes/enemies/boss1/bootlegeo.gd" type="Script" id=22]
[ext_resource path="res://scripts/physicsthings.gd" type="Script" id=23]
[ext_resource path="res://state_machine/state_machine.gd" type="Script" id=24]

[sub_resource type="Shader" id=9]
code = "shader_type canvas_item;

uniform vec4 rep_col : hint_color;



void fragment()
{
	
	vec4 rgba = texture(TEXTURE,UV);
	float gs = (rgba.r +rgba.g + rgba.b) / 3.0;
	
	if (gs==0.0)
	{
		rgba.rgb = rep_col.rgb;
	}
	
	COLOR = rgba;
	
}
"

[sub_resource type="ShaderMaterial" id=23]
resource_local_to_scene = true
shader = SubResource( 9 )
shader_param/rep_col = Color( 0, 0, 0, 1 )

[sub_resource type="CanvasItemMaterial" id=11]

[sub_resource type="Curve" id=12]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), -1.01015, 0.0, 0, 0 ]

[sub_resource type="Gradient" id=13]
offsets = PoolRealArray( 0.0295567, 0.182266, 0.597734, 0.852691, 0.988669 )
colors = PoolColorArray( 1, 0.962264, 0, 0, 0.984314, 0.94902, 0.211765, 1, 1, 0, 0, 1, 0, 0, 0, 0.501961, 0, 0, 0, 0 )

[sub_resource type="RectangleShape2D" id=21]
extents = Vector2( 15, 26.5 )

[sub_resource type="Resource" id=18]
script = ExtResource( 1 )
gun_name = ""
gun_desc = ""
gun_fire_mode = 1
fires_before_charging = false
pellet_count = 1
burst_count = 1
cooldown = 0.05
max_charge = 0.0
spread = 0.0
recoil = 0.0
rotation_recoil = 0.0
damage = 1
speed = 400
bullet_lifetime = 2.0
no_cooldown = false

[sub_resource type="Resource" id=19]
script = ExtResource( 3 )
data_res = SubResource( 18 )
bullet = ExtResource( 19 )

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 13, 22.5 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 7.5, 15.5 )

[sub_resource type="CircleShape2D" id=24]
radius = 500.0

[sub_resource type="Animation" id=17]
length = 0.032
tracks/0/type = "value"
tracks/0/path = NodePath("Flippables/Bootlegeo:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.00203761 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Flippables/Bootlegeo/CPUParticles2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.00160542 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ Vector2( 2, -5 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("DropKick/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Flippables/UpperCut/CollisionShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Flippables/CPUParticles2D:emitting")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=16]
resource_name = "dropkick"
tracks/0/type = "value"
tracks/0/path = NodePath("Flippables/Bootlegeo:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 8 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Flippables/Bootlegeo/CPUParticles2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.000602033 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -2, -4 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("DropKick/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.895763 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="Animation" id=15]
resource_name = "jump"
tracks/0/type = "value"
tracks/0/path = NodePath("Flippables/Bootlegeo:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 5 ]
}

[sub_resource type="Animation" id=22]
resource_name = "knocked"
length = 0.032
tracks/0/type = "value"
tracks/0/path = NodePath("Flippables/Bootlegeo:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 9 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Flippables/Bootlegeo/CPUParticles2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ Vector2( -1, -3 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("DropKick/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Flippables/UpperCut/CollisionShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Flippables/CPUParticles2D:emitting")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=6]
resource_name = "run"
length = 0.181
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Flippables/Bootlegeo:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 1, 2 ]
}

[sub_resource type="Animation" id=7]
resource_name = "shoot"
length = 0.24
tracks/0/type = "value"
tracks/0/path = NodePath("Flippables/Bootlegeo:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( -0.00256039, 0.0327896, 0.114672 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 6, 7, 6 ]
}

[sub_resource type="Animation" id=14]
resource_name = "uppercut"
tracks/0/type = "value"
tracks/0/path = NodePath("Flippables/Bootlegeo:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.0012802, 0.0473673 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 4, 5 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Flippables/UpperCut/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Flippables/CPUParticles2D:emitting")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=8]
resource_name = "uppercutcharge"
length = 0.063
tracks/0/type = "value"
tracks/0/path = NodePath("Flippables/Bootlegeo:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 3 ]
}

[sub_resource type="CircleShape2D" id=20]
radius = 11.0

[node name="Entity" type="KinematicBody2D"]
collision_layer = 0
collision_mask = 40
script = ExtResource( 22 )
hitstun_starts_once_on_floor = true
hitstun_time = 1.1
o_color = 0.111364

[node name="PhysicsStuff" type="Node" parent="."]
script = ExtResource( 23 )

[node name="Flippables" type="Node2D" parent="."]
unique_name_in_owner = true
script = ExtResource( 2 )

[node name="Bootlegeo" type="Sprite" parent="Flippables"]
material = SubResource( 23 )
texture = ExtResource( 11 )
hframes = 10

[node name="CPUParticles2D" type="CPUParticles2D" parent="Flippables/Bootlegeo"]
show_behind_parent = true
material = SubResource( 11 )
position = Vector2( 2, -5 )
rotation = -0.261799
amount = 32
lifetime = 0.4
randomness = 1.0
local_coords = false
texture = ExtResource( 17 )
emission_shape = 1
emission_sphere_radius = 1.94
direction = Vector2( 0, -1 )
spread = 10.0
gravity = Vector2( 0, 0 )
initial_velocity = 64.0
damping = 75.0
scale_amount = 1.5
scale_amount_random = 0.44
scale_amount_curve = SubResource( 12 )
color_ramp = SubResource( 13 )

[node name="UpperCut" parent="Flippables" instance=ExtResource( 20 )]
visible = false
position = Vector2( 15, -7 )
damage = 1
knockback = 20
is_enemy = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Flippables/UpperCut"]
position = Vector2( 5, 18.5 )
shape = SubResource( 21 )
disabled = true

[node name="Gun" type="Node2D" parent="Flippables"]
unique_name_in_owner = true
visible = false
position = Vector2( 1, 10 )
script = ExtResource( 4 )
_gun_data = SubResource( 19 )
is_enemy = true

[node name="Position2D" type="Position2D" parent="Flippables/Gun"]
unique_name_in_owner = true

[node name="SpriteSheet" type="Sprite" parent="Flippables/Gun/Position2D"]
unique_name_in_owner = true
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 10 )

[node name="Cooldown" type="Timer" parent="Flippables/Gun"]
unique_name_in_owner = true
one_shot = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="Flippables/Gun"]
unique_name_in_owner = true

[node name="CPUParticles2D" type="CPUParticles2D" parent="Flippables"]
material = SubResource( 11 )
position = Vector2( 11, -3 )
rotation = 3.14159
emitting = false
amount = 32
lifetime = 0.2
randomness = 1.0
local_coords = false
texture = ExtResource( 17 )
emission_shape = 1
emission_sphere_radius = 1.94
direction = Vector2( 0, -1 )
spread = 10.0
gravity = Vector2( 0, 0 )
initial_velocity = 64.0
damping = 75.0
scale_amount = 1.5
scale_amount_random = 0.44
scale_amount_curve = SubResource( 12 )
color_ramp = SubResource( 13 )

[node name="HurtComponent" type="Area2D" parent="."]
script = ExtResource( 18 )
is_enemy = true
path_entitystatus = NodePath("../StatusThing")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtComponent"]
position = Vector2( 1, 9.5 )
shape = SubResource( 1 )

[node name="StatusThing" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource( 16 )
MAX_HP = 150

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 2.5, 16.5 )
shape = SubResource( 2 )

[node name="StateMachine" type="Node" parent="."]
script = ExtResource( 24 )
initial_state = NodePath("Intro")

[node name="Intro" type="Node" parent="StateMachine"]
script = ExtResource( 8 )
can_go_to_hurtstate = false
idle_state_path = NodePath(".")
attack_state_path = NodePath("../RandomAttacks")

[node name="RunTowardsPlayer" type="Node" parent="StateMachine"]
unique_name_in_owner = true
script = ExtResource( 12 )
can_go_to_hurtstate = false
speed = 30

[node name="UpperCutCharge" type="Node" parent="StateMachine"]
unique_name_in_owner = true
script = ExtResource( 14 )
can_go_to_hurtstate = false

[node name="Timer" type="Timer" parent="StateMachine/UpperCutCharge"]
wait_time = 0.8
one_shot = true

[node name="Shoryuken" type="Node" parent="StateMachine"]
unique_name_in_owner = true
script = ExtResource( 13 )

[node name="RandomAttacks" type="Node" parent="StateMachine"]
unique_name_in_owner = true
script = ExtResource( 5 )
can_go_to_hurtstate = false
attacks = [ NodePath("../RunTowardsPlayer"), NodePath("../Shoot"), NodePath("../JumpTowardsPlayer") ]

[node name="Shoot" type="Node" parent="StateMachine"]
unique_name_in_owner = true
script = ExtResource( 15 )
can_go_to_hurtstate = false
max_shots = 3

[node name="Timer" type="Timer" parent="StateMachine/Shoot"]
wait_time = 1.25
one_shot = true

[node name="JumpTowardsPlayer" type="Node" parent="StateMachine"]
unique_name_in_owner = true
script = ExtResource( 7 )

[node name="Timer" type="Timer" parent="StateMachine/JumpTowardsPlayer"]
wait_time = 0.1
one_shot = true

[node name="NewPlayerDetector" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 0
script = ExtResource( 6 )
cantaimY = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="NewPlayerDetector"]
shape = SubResource( 24 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
anims/RESET = SubResource( 17 )
anims/dropkick = SubResource( 16 )
anims/jump = SubResource( 15 )
anims/knocked = SubResource( 22 )
anims/run = SubResource( 6 )
anims/shoot = SubResource( 7 )
anims/uppercut = SubResource( 14 )
anims/uppercutcharge = SubResource( 8 )
script = ExtResource( 21 )

[node name="DropKick" parent="." instance=ExtResource( 20 )]
visible = false
position = Vector2( 5, 20 )
damage = 1
is_enemy = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="DropKick"]
shape = SubResource( 20 )
disabled = true

[connection signal="lowhp" from="." to="StateMachine/RunTowardsPlayer" method="_on_Entity_lowhp"]
[connection signal="lowhp" from="." to="StateMachine/UpperCutCharge" method="_on_Entity_lowhp"]
[connection signal="lowhp" from="." to="StateMachine/Shoot" method="_on_Entity_lowhp"]
[connection signal="lowhp" from="." to="StateMachine/JumpTowardsPlayer" method="_on_Entity_lowhp"]
[connection signal="proj_created" from="Flippables/Gun" to="." method="_on_Gun_proj_created"]
[connection signal="died" from="HurtComponent" to="." method="_on_HurtComponent_died"]
[connection signal="hurted" from="HurtComponent" to="." method="hp_check"]
[connection signal="hurted" from="HurtComponent" to="." method="_on_HurtComponent_hurted"]
[connection signal="changed_state" from="StateMachine" to="AnimationPlayer" method="_on_StateMachine_changed_state"]
[connection signal="entered" from="StateMachine/RunTowardsPlayer" to="AnimationPlayer" method="_on_RunTowardsPlayer_entered"]
[connection signal="entered" from="StateMachine/UpperCutCharge" to="AnimationPlayer" method="_on_UpperCutCharge_entered"]
[connection signal="timeout" from="StateMachine/UpperCutCharge/Timer" to="StateMachine/UpperCutCharge" method="_on_Timer_timeout"]
[connection signal="entered" from="StateMachine/Shoryuken" to="Flippables" method="_on_Shoryuken_entered"]
[connection signal="entered" from="StateMachine/Shoryuken" to="AnimationPlayer" method="_on_Shoryuken_entered"]
[connection signal="exited" from="StateMachine/Shoryuken" to="Flippables" method="_on_Shoryuken_exited"]
[connection signal="target_detected" from="NewPlayerDetector" to="StatusThing" method="_on_NewPlayerDetector_target_detected"]
[connection signal="target_detected" from="NewPlayerDetector" to="StateMachine/Intro" method="_on_NewPlayerDetector_target_detected"]
